# dali-examples

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: FindDali.cmake
data/mnist/: generate.py
examples/: api_showcase.cpp  arithmetic.cpp  babi_solvers.cpp  beam_tree_training.cpp  bidirectional_sentiment.cpp  character_prediction.cpp  grid_search_simple.cpp  language_model.cpp  language_model_from_senti.cpp  lattice_prediction.cpp  lattice_prediction_from_protobuff.cpp  loading_from_sqlite.cpp  lstm_sentiment.cpp  machine_comprehension.cpp  mlbasics_learn_to_add.cpp  mlbasics_rnn_binary_addition.cpp  mnist_training.cpp  sparse_lstm_sentiment.cpp  sparse_ner.cpp  sparse_paraphrase.cpp  utils.cpp  utils.h  visualizer.cpp
flags/: language_model_easy.flags
models/: QuestionAnswering.h  ReconstructModel.cpp  ReconstructModel.h  RecurrentEmbeddingModel.cpp  RecurrentEmbeddingModel.h  StackedGatedModel.h  StackedModel.cpp  StackedModel.h  StackedModelState.h  shallow_copy.h  stacked_model_builder.h  standard_flags.cpp  standard_flags.h  tests.cpp
